# YOLOv8-rs

./: .gitignore  Cargo.toml  README.md  build.sh  code  env
.github/workflows/: rust.yml
benches/: e2e.rs  postprocess.rs  prediction.rs  preprocess.rs
examples/predict/: main.rs
examples/video/: main.rs
models/: yolo.sh
src/: classes.rs  image.rs  lib.rs  utils.rs
