[package]
name = "yolo-v8"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tch = "0.17.0"

[[example]]
name = "yolo-predict"
path = "examples/predict/main.rs"

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }


[[bench]]
name = "preprocess"
harness = false

[[bench]]
name = "postprocess"
harness = false

[[bench]]
name = "prediction"
harness = false

[[bench]]
name = "e2e"
harness = false

