[package]
name = "yolo-v8"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
# default = ["opencv"]
default = []
opencv = ["dep:opencv"]

# use opencv to resize the image during the pre-process step
[dependencies]
tch = "0.17.0"
opencv = { version = "0.93.0", optional = true, features = ["rgb"] }
rgb = "0.8.50"

[[example]]
name = "yolo-predict"
path = "examples/predict/main.rs"

[[example]]
name = "video"
path = "examples/video/main.rs"
required-features = ["opencv"]


[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }


[[bench]]
name = "preprocess"
harness = false

[[bench]]
name = "postprocess"
harness = false

[[bench]]
name = "prediction"
harness = false

[[bench]]
name = "e2e"
harness = false
